force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/leaseworks__Aircraft_In_Deal__c.object-meta.xml
<CustomObject>
    <label>Aircraft In Campaign</label>
    <nameField>
        <label>Marketed Aircraft ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft In Campaign</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>