force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__AIC_External_ID__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AIC_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Aircraft In Campaign ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>