force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Aircraft that needs to be added to this campaign. Once this aircraft is selected, all the fields in the Aircraft Summary are automatically set based on properties on this aircraft</description>
    <inlineHelpText>To setup an aircraft for the campaign, select an aircraft from the existing fleet by using this look up. Once the aircraft has been set, all the properties of the aircraft (Current Rent, TSN, CSN, etc) are automatically populated</inlineHelpText>
    <label>Aircraft</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Marketing Campaigns With This Aircraft</relationshipLabel>
    <relationshipName>Marketed_Aircraft</relationshipName>
    <type>Lookup</type>
</CustomField>