force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Aircraft_Analytics__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Analytics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Analytics</label>
    <referenceTo>leaseworks__Aircraft_Data_Mining__c</referenceTo>
    <relationshipLabel>Aircraft In Campaign</relationshipLabel>
    <relationshipName>Aircraft_In_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>