force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Anticipated_Remarketing_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Anticipated_Remarketing_Status__c</fullName>
    <description>This field defines the remarketing strategy for this aircraft. The value is set on the lease page and read only on this page. Choices are Placement, Last Lease / Part-Out, Potential Extension, Sale
Evaluating for Potential Sale. The choice of the strategy helps commercial teams make decisions on which prospects to engage</description>
    <formula>TEXT(leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Anticipated_Remarketing_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field defines the remarketing strategy for this aircraft. The value is set on the lease page and read only on this page. Choices are Placement, Last Lease / Part-Out, Potential Extension, Sale
Evaluating for Potential Sale.</inlineHelpText>
    <label>Anticipated Remarketing Status</label>
    <type>Text</type>
</CustomField>