force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rent__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Base_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rent paid by the current operator of this aircraft</inlineHelpText>
    <label>Current Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>