force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Extended_On__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Extended_On__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Extended_On__c</formula>
    <label>Extended On</label>
    <type>Date</type>
</CustomField>