force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Firm_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Firm_Aircraft__c</fullName>
    <label>Firm Aircraft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>