force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; &amp; leaseworks__Aircraft__r.leaseworks__Lease__c , leaseworks__Aircraft__r.leaseworks__Lease__r.Name, &#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease</label>
    <type>Text</type>
</CustomField>