force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Notional_Maintenance_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notional_Maintenance_Account_Balance__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2203NotionalMaint.AccountBal.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>