force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <formula>IF( leaseworks__Aircraft__c &lt;&gt; null , leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Operator_New__r.Name, &#39;&#39;)</formula>
    <label>Operator</label>
    <type>Text</type>
</CustomField>