force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Transitioned_On__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transitioned_On__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Transitioned_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transitioned On</label>
    <type>Date</type>
</CustomField>