force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Transitioned_On_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transitioned_On_Month__c</fullName>
    <formula>CASE(Month(leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Transitioned_On__c), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transitioned On (Month)</label>
    <type>Text</type>
</CustomField>