force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__TSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time since new for the Asset</inlineHelpText>
    <label>TSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>