force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__Type_Variant_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_Variant_F__c</fullName>
    <formula>IF( leaseworks__Aircraft__c &lt;&gt; null , leaseworks__Aircraft__r.leaseworks__Type_Variant__c, leaseworks__Aircraft_In_Transaction__r.leaseworks__Type_Variant_F__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Variant</label>
    <type>Text</type>
</CustomField>