force-app/main/default/objects/leaseworks__Aircraft_In_Deal__c/fields/leaseworks__YOM__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__YOM__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Date_of_Manufacture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vintage</label>
    <type>Date</type>
</CustomField>